[gd_scene load_steps=2 format=3 uid="uid://backb4s4qv1ve"]

[ext_resource type="Script" path="res://menu.gd" id="1_70nay"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_70nay")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LobbyNameTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "Lobby name..."

[node name="PlayerNameTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
placeholder_text = "Player name..."

[node name="JoinLobbyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join Lobby"

[node name="CreateLobbyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create Lobby"

[connection signal="pressed" from="MarginContainer/VBoxContainer/JoinLobbyButton" to="." method="_on_join_lobby_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreateLobbyButton" to="." method="_on_create_lobby_button_pressed"]
